playing with responsiveness

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="hero">
         <p>This week Mozillians have...</p>
 
-        <p id="running" class="block"><b>run</b> for <b><span id="running-distance">..</span> kms</b> <br> by <b id="running-athletes">..</b> athletes</p>
-        <p id="cycling" class="block"><b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> <br> by <b id="cycling-athletes">..</b> athletes</p>
+        <p id="running" class="block"><b>run</b> for <b><span id="running-distance">..</span> kms</b> by <b id="running-athletes">..</b> athletes</p>
+        <p id="cycling" class="block"><b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> by <b id="cycling-athletes">..</b> athletes</p>
 
       </div>
-      <p>Data pulled from the <a href="https://www.strava.com/clubs/Mozilla-Cycling">Mozilla cycling</a> and <a href="https://www.strava.com/clubs/mozilla">Mozilla running</a> clubs on Strava. <a href="https://github.com/andymckay/mozilla-strava">Source on github</a>.</p>
+      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <a href="http://bit.ly/moz-running">http://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
     </div>
     <script src="assets/populate.js"></script>
   </body>
