--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="cycling" class="block"><b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> by <b id="cycling-athletes">..</b> athletes</p>
 
       </div>
-      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <a href="http://bit.ly/moz-running">http://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
+      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <br/> <a href="http://bit.ly/moz-running">http://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
     </div>
     <script src="assets/populate.js"></script>
   </body>
