--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
   <head>
     <title>Mozilla Athleticism</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/bootstrap.min.css"/>
     <link rel="stylesheet" href="assets/strava.css"/>
-    <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css">
+    <link rel="stylesheet" href="https://code.cdn.mozilla.net/fonts/fira.css" />
   </head>
   <body>
     <div class="container">
-      <div class="hero">
-        <p>This week Mozillians have...</p>
-
-        <p id="running" class="block"><b>run</b> for <b><span id="running-distance">..</span> kms</b> by <b id="running-athletes">..</b> athletes</p>
-        <p id="cycling" class="block"><b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> by <b id="cycling-athletes">..</b> athletes</p>
-
+      <div class="wrapper">
+        <div class="left">
+          <p>This week Mozillians have:</p>
+          <p id="running" class="block">🏃 <b>run</b> for <b><span id="running-distance">..</span> kms</b> by <b id="running-athletes">..</b> athletes</p>
+          <p id="cycling" class="block">🚴 <b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> by <b id="cycling-athletes">..</b> athletes</p>
+        </div>
+        <div class="right">
+          <div id="chart-container">
+            <canvas id="chart"></canvas>
+          </div>
+        </div>
       </div>
-      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <br/> <a href="https://bit.ly/moz-running">https://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
     </div>
+    <div class="container muted">
+      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <a href="https://bit.ly/moz-running">https://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
     <script src="assets/populate.js"></script>
   </body>
 </html>
