--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="wrapper">
         <div class="left">
           <p>This week Mozillians have:</p>
-          <p id="running" class="block">🏃 <b>run</b> for <b><span id="running-distance">..</span> kms</b> by <b id="running-athletes">..</b> athletes</p>
+          <p id="running" class="block">🏃🏿 <b>run</b> for <b><span id="running-distance">..</span> kms</b> by <b id="running-athletes">..</b> athletes</p>
           <p id="cycling" class="block">🚴 <b>cycled</b> for <b><span id="cycling-distance">..</span> kms</b> by <b id="cycling-athletes">..</b> athletes</p>
         </div>
         <div class="right">
