add in RTCC thanks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="container muted">
-      <p>Data pulled from the <a href="https://bit.ly/moz-cycling">https://bit.ly/moz-cycling</a> and <a href="https://bit.ly/moz-running">https://bit.ly/moz-running</a> clubs on Strava. <i>Join us!</i></p>
+      <p>👏 Thank you to everyone who supported the Vancouver team for Ride to Conquer Cancer 2017. We raised over $10k CAD. Thank you from Eva, Roland and Andy.</p>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.bundle.min.js"></script>
     <script src="assets/populate.js"></script>
